[gd_scene load_steps=16 format=3 uid="uid://eikwnrlq7dx"]

[ext_resource type="Script" path="res://Entities/Minecart.gd" id="1_16msw"]
[ext_resource type="Texture2D" uid="uid://bwd2uf7jgu58f" path="res://Shared/export/s4m_ur4i_factory-o-pixelart_tileset.png" id="1_dtt4l"]
[ext_resource type="Script" path="res://Entities/Player/CollectObjects.gd" id="3_q8q8n"]
[ext_resource type="Script" path="res://Entities/Player/BuildingSelector.gd" id="4_60p4j"]
[ext_resource type="Texture2D" uid="uid://dq5ss32licqa5" path="res://Shared/06_Hologram_Theme/Sprites/Spritesheet_Animation_UI_Hologram_Select_02a.png" id="5_4hybs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p83i2"]
radius = 2.5
height = 10.0002

[sub_resource type="CircleShape2D" id="CircleShape2D_jhrid"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fv6si"]
size = Vector2(24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3o7q"]
atlas = ExtResource("5_4hybs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcwxw"]
atlas = ExtResource("5_4hybs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_66w3l"]
atlas = ExtResource("5_4hybs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5w5q"]
atlas = ExtResource("5_4hybs")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tu56u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3o7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcwxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66w3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5w5q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wquhe"]
emission_shape = 3
emission_box_extents = Vector3(2, 1, 1)
particle_flag_disable_z = true
spread = 5.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 30.0
angular_velocity_min = -300.0
angular_velocity_max = 300.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_i5ovb"]
atlas = ExtResource("1_dtt4l")
region = Rect2(70, 165, 4, 5)

[node name="Minecart" type="AnimatableBody2D" groups=["draggable"]]
collision_layer = 4
collision_mask = 133129
sync_to_physics = false
script = ExtResource("1_16msw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_dtt4l")
region_enabled = true
region_rect = Rect2(34, 162, 12, 9)

[node name="LoadSprite" type="Sprite2D" parent="."]
position = Vector2(0, -3)
texture = ExtResource("1_dtt4l")
region_enabled = true
region_rect = Rect2(52, 162.285, 8, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9.87053e-05, 0.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_p83i2")

[node name="CollectObjects" type="Area2D" parent="."]
position = Vector2(0, 1)
collision_mask = 4
script = ExtResource("3_q8q8n")
collect_distance = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectObjects"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_jhrid")
debug_color = Color(0.541176, 0.407843, 0.996078, 0.419608)

[node name="BuildingSelector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 131080
script = ExtResource("4_60p4j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuildingSelector"]
visible = false
shape = SubResource("RectangleShape2D_fv6si")
debug_color = Color(0.792157, 0.427451, 0, 0.419608)

[node name="Marker" type="AnimatedSprite2D" parent="BuildingSelector"]
visible = false
z_index = 3
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_tu56u")
autoplay = "default"

[node name="UnloadPartical" type="GPUParticles2D" parent="."]
position = Vector2(0, -2)
emitting = false
amount = 6
process_material = SubResource("ParticleProcessMaterial_wquhe")
texture = SubResource("AtlasTexture_i5ovb")
lifetime = 0.5
